fix (header) : add z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,16 +8,17 @@
 
 /* Header */
 
-header{
+header {
     width: 100%;
     background-color: #ff6900;
     padding: 10px 0px;
-    box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.49);
+    box-shadow: 0px 3px 12px 0px rgba(0, 0, 0, 0.49);
     position: fixed;
-    top:0px
+    top: 0px;
+    z-index: 1;
 }
 
-.contenitore{
+.contenitore {
     margin: 0 auto;
     width: 80%;
     display: flex;
@@ -26,17 +27,17 @@ header{
     align-items: center;
 }
 
-.logo{
+.logo {
     width: 10%;
     padding: 10px;
 }
 
-.menu{
+.menu {
     display: flex;
     color: white;
 }
 
-.menu li{
+.menu li {
     list-style: none;
     flex-direction: row;
     padding: 0 10px;
@@ -58,13 +59,13 @@ a:hover {
 
 /* Main */
 
-main{
+main {
     width: 80%;
     margin: 0 auto;
     margin-top: 100px;
 }
 
-.flex{
+.flex {
     display: flex;
     margin-top: 50px;
 }
@@ -75,12 +76,12 @@ main{
     cursor: pointer;
 }
 
-.colonna img{
+.colonna img {
     width: 100%;
     padding: 0 5px;
 }
 
-.wishlist{
+.wishlist {
     font-size: 35px;
     background-color: white;
     text-align: center;
@@ -90,14 +91,13 @@ main{
     right: 0;
     width: 40px;
     height: 40px;
-
 }
 
-.colonna:hover .wishlist{
+.colonna:hover .wishlist {
     color: red;
 }
 
-.sconto{
+.sconto {
     background-color: red;
     display: block;
     position: absolute;
@@ -111,7 +111,8 @@ main{
     font-weight: 600;
 }
 
-.bollino, .bollino2{
+.bollino,
+.bollino2 {
     background-color: green;
     display: block;
     position: absolute;
@@ -124,20 +125,20 @@ main{
     font-weight: 500;
 }
 
-.bollino{
+.bollino {
     left: 60px;
 }
 
-.bollino2{
+.bollino2 {
     left: 5px;
 }
 
-.prodotto{
+.prodotto {
     display: none;
     width: 100%;
 }
 
-.colonna:hover .prodotto{
+.colonna:hover .prodotto {
     display: block;
     height: 100%;
     width: 100%;
@@ -148,40 +149,41 @@ main{
     right: 0;
 }
 
-.info{
+.info {
     padding: 0px 5px;
 }
 
-.nome-brand, .prezzo{
+.nome-brand,
+.prezzo {
     font-size: 12px;
 }
 
-h2{
+h2 {
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 600;
 }
 
-.prezzo{
+.prezzo {
     color: red;
     font-weight: 600;
 }
 
-.sconto-prezzo{
+.sconto-prezzo {
     font-weight: 500;
     color: black;
-    text-decoration:line-through;
+    text-decoration: line-through;
 }
 
 
 /* Footer */
 
-footer{
+footer {
     background-color: black;
     width: 100%;
 }
 
-.footer-contenitore{
+.footer-contenitore {
     margin: 0 auto;
     width: 80%;
     display: flex;
@@ -191,7 +193,7 @@ footer{
     margin-top: 50px;
 }
 
-.social li{
+.social li {
     color: white;
     list-style: none;
     display: inline-block;
@@ -199,17 +201,18 @@ footer{
     padding-right: 5px;
 }
 
-h3, h4{
+h3,
+h4 {
     color: white;
     font-weight: 600;
 }
 
-h3{
+h3 {
     font-size: 14px;
     text-transform: normal;
 }
 
-h4{
+h4 {
     font-size: 12px;
     padding-bottom: 10px;
 }
